horizontal scroll fix

--- a/css/main.css
+++ b/css/main.css
@@ -809,16 +809,13 @@ div.important__block > p {
 .terms {
   display: flex;
   flex-direction: column;
-  margin-top: 1.25rem;
-  margin-left: 0.625rem;
-  margin-right: 0.625rem;
+  padding: 1.25rem 0.625rem 0;
   justify-content: start;
   align-content: center;
 }
 
 .terms-background {
   background-image: url(./../../img/bg-3.png);
-  width: 20rem;
   height: 20rem;
   background-repeat: no-repeat;
 }
@@ -940,6 +937,7 @@ div.important__block > p {
   font-weight: 500;
   line-height: normal;
   background-color: #FFFEF1;
+  padding: 1.85rem 0.625rem;
 }
 
 .booking-form-input {
@@ -950,15 +948,12 @@ div.important__block > p {
   border: 0;
   border-bottom: 0.0625rem solid #242424;
   background-color: #FFFEF1;
-  width: 18.75rem;
+  width: 100%;
   height: 2.1875rem;
   margin-top: 2.8125rem;
-  margin-left: 0.625rem;
-  margin-right: 0.625rem;
 }
-
-.item1 {
-  margin-top: 1.875rem;
+.booking-form-input:first-child {
+  margin-top: 0;
 }
 
 .item2 {
@@ -972,8 +967,6 @@ div.important__block > p {
   line-height: normal;
   width: 18.75rem;
   height: 4.375rem;
-  margin-left: 0.625rem;
-  margin-right: 0.625rem;
   margin-bottom: 1.875rem;
   border-radius: 6.25rem;
   border: 0;
@@ -1225,3 +1218,5 @@ div.important__block > p {
     color: #242424;
   }
 }
+
+/*# sourceMappingURL=main.css.map */
