--- a/sass/blocks/_booking.scss
+++ b/sass/blocks/_booking.scss
@@ -25,6 +25,7 @@
 .booking-form {
     @include title;
     background-color: $background-bookingform-important-color;
+    padding: 1.85rem 0.625rem;
 }
 
 .booking-form-input {
@@ -32,15 +33,13 @@
     border: 0;
     border-bottom: 0.0625rem solid $font-global-color;
     background-color: $background-bookingform-important-color;
-    width: 18.75rem;
+    width: 100%;
     height: 2.1875rem;
     margin-top: 2.8125rem;
-    margin-left: 0.625rem;
-    margin-right: 0.625rem;
-}
 
-.item1 {
-    margin-top: 1.875rem;
+    &:first-child {
+        margin-top: 0;
+    }
 }
 
 .item2 {
@@ -51,8 +50,6 @@
     @include title;
     width: 18.75rem;
     height: 4.375rem;
-    margin-left: 0.625rem;
-    margin-right: 0.625rem;
     margin-bottom: 1.875rem;
     border-radius: 6.25rem;
     border: 0;
